codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_forked_from.snap
---
source: tui/src/status/tests.rs
assertion_line: 293
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────────╮
│  >_ Codey (v0.0.0)                                                     │
│                                                                        │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date          │
│ information on rate limits and credits                                 │
│                                                                        │
│  Model:             gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                              │
│  Approval:          on-request                                         │
│  Sandbox:           read-only                                          │
│  Agents.md:         <none>                                             │
│  Account:           user@example.com (Unknown)                         │
│  Session:           0f0f3c13-6cf9-4aa4-8b80-7d49c2f1be2e               │
│  Forked from:       e9f18a88-8081-4e51-9d4e-8af5cde2d8dd               │
│                                                                        │
│  Context window:    99% left (1.2K used / 272K)                        │
│  Context compact:   0                                                  │
│  Limits:            data not available yet                             │
╰────────────────────────────────────────────────────────────────────────╯
