codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_missing_limits_message.snap
---
source: tui/src/status/tests.rs
assertion_line: 939
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────────╮
│  >_ Codey (v0.0.0)                                                     │
│                                                                        │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date          │
│ information on rate limits and credits                                 │
│                                                                        │
│  Model:             gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                              │
│  Approval:          on-request                                         │
│  Sandbox:           read-only                                          │
│  Agents.md:         <none>                                             │
│  Account:           user@example.com (Unknown)                         │
│                                                                        │
│  Context window:    99% left (750 used / 272K)                         │
│  Context compact:   0                                                  │
│  Limits:            data not available yet                             │
╰────────────────────────────────────────────────────────────────────────╯
