codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
assertion_line: 890
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  >_ Codey (v0.0.0)                                                 │
│                                                                    │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date      │
│ information on rate limits and credits                             │
│                                                                    │
│  Model:             gpt-5.1-codex-max (reasoning high, summaries d │
│  Directory: [[workspace]]                                          │
│  Approval:          on-request                                     │
│  Sandbox:           read-only                                      │
│  Agents.md:         <none>                                         │
│  Account:           user@example.com (Unknown)                     │
│                                                                    │
│  Context window:    99% left (2.25K used / 272K)                   │
│  Context compact:   0                                              │
│  5h limit:          [██████░░░░░░░░░░░░░░] 28% left (resets 03:14) │
╰────────────────────────────────────────────────────────────────────╯
